Tidy method signatures and functional interface references.